package de.szut;

public interface Bonus {

    double calculate(Employee employee);
}
