package de.szut;

public interface Employee {
    String getName();

    int getYearsAtCompany();

    int getPerformanceScore();

    int getCompletedProjects();

    int getAbsenceDays();

    boolean isTeamLeader();

}
